Remove illegal access prohibition