@@ -52,20 +52,9 @@ subprojects {
     sourceSets {
         main {
             java { srcDirs = [] }    // no source dirs for the java compiler
-            groovy { srcDirs = ["src/main/java", "src/main/groovy"] }  // compile   everything in src/ with groovy
+            groovy { //noinspection GroovyAssignabilityCheck
+                srcDirs = ["src/main/java", "src/main/groovy"] }  // compile   everything in src/ with groovy
         }
-    }
-
-    compileJava {
-        options.forkOptions.jvmArgs += '--illegal-access=deny'
-    }
-
-    compileGroovy {
-        options.forkOptions.jvmArgs += '--illegal-access=deny'
-    }
-
-    test {
-        jvmArgs '--illegal-access=deny'
     }
 
     publishing {
